Solve linter stylehint error

--- a/index.html
+++ b/index.html
@@ -58,31 +58,31 @@
     <h2>Main Program</h2>
     <div class="underline"></div>
     <div class="block anim">
-      <div class="anim">
+      <article class="anim">
         <img src="img/lecture.png" alt="lecture">
         <h3>Lecture</h3>
         <p>Learn to code . Build projects. Graduates have gotten jobs at tech companies</p>
-      </div>
-      <div>
+      </article>
+      <article>
         <img src="img/projection-screen.png" alt="projection">
         <h3>Projection</h3>
         <p>Learn to code . Build projects. Graduates have gotten jobs at tech companies</p>
-      </div>
-      <div>
+      </article>
+      <article>
         <img src="img/discussion.png" alt="discussion">
         <h3>Discussion</h3>
         <p>Learn to code . Build projects. Graduates have gotten jobs at tech companies</p>
-      </div>
-      <div class="active anim">
+      </article>
+      <article class="active anim">
         <img src="img/workshop1.png" alt="workshop">
         <h3>Workshop</h3>
         <p>Learn to code . Build projects. Graduates have gotten jobs at tech companies</p>
-      </div>
-      <div>
+      </article>
+      <article>
         <img src="img/decision-making.png" alt="decision">
         <h3>Decision</h3>
         <p>Learn to code . Build projects. Graduates have gotten jobs at tech companies</p>
-      </div>
+      </article>
     </div>
     <button class="see-whole anim">
       <span class="desktop">SEE THE WHOLE PROGRAM</span>
