Add and style schedule page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <ul class="menu" id="menu">
           <li class="mobile"><img src="img/Icon-close.png" alt="close" id="close"></li>
           <li><a href="about.html" class="active">About</a></li>
-          <li><a href="#">Program</a></li>
+          <li><a href="schedule.html">Schedule</a></li>
           <li><a href="#">Join</a></li>
           <li><a href="#">Sponsor</a></li>
           <li><a href="#">News</a></li>
