--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
                     <li class="mobile"><img src="img/Icon-close.png" alt="close" id="close"></li>
                     <li><a href="index.html" class="mobile">Home</a></li>
                     <li><a href="about.html" class="active">About</a></li>
-                    <li><a href="#">Program</a></li>
+                    <li><a href="schedule.html">Schedule</a></li>
                     <li><a href="#">Join</a></li>
                     <li><a href="#">Sponsor</a></li>
                     <li><a href="#">News</a></li>
